--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,24 +5,35 @@
     align-items: center;
 }
 
-.main-cards {
+.main-cards-numeros {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 1200px;
     flex-wrap: wrap;
-    gap: 6em;
-    padding: 3em 0;
+    gap: 3em;
+    padding: 2em 0;
+}
+
+.main-cards-necessidades {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1200px;
+    flex-wrap: wrap;
+    gap: 5em;
+    padding: 1em 0;
 }
 
 .main-cards-cores {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 1600px;
+    width: 1400px;
     flex-wrap: wrap;
-    gap: 6em;
-    padding: 3em 0;
+    column-gap: 6em;
+    row-gap: 3em;
+    padding: 1em 0;
 }
 
 .card {
@@ -30,32 +41,32 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    height: 240px;
-    width: 220px;
+    height: 200px;
+    width: 189px;
     border-radius: 15px;
-    box-shadow: #73B369 1px 5px 20px;
+    box-shadow: #73B369 0px 4px 30px;
     cursor: pointer;
 }
 
 .card-figure {
-    width: 100%;
+    width: 101%;
     border-radius: 15px;
     cursor: pointer;
     position: relative;
 }
 
 .audio-verde-img {
-    width: 30px;
+    width: 25px;
     position: absolute;
     top: 10px;
-    left: 185px;
+    left: 160px;
 }
 
 .card-content {
     background-color: #73B369;
     color: #fff;
     height: 35px;
-    width: 101%;
+    width: 100%;
     position: absolute;
     top: 11.5em;
     border-radius: 8px 8px 12px 12px;
@@ -63,7 +74,7 @@
     justify-content: center;
     align-items: center;
     font-family: "Poppins", sans-serif;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 500;
 }
 
