--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -54,3 +54,17 @@
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     transition: 2s;
 }
+
+@media (min-height: 800px) {
+    .footer {
+        bottom: -102px;
+    }
+    
+  }
+
+@media (min-height: 900px) {
+    .footer {
+        bottom: -180px;
+    }
+    
+  }
